--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,9 @@
 body
 {
-    color: brown;
+    color: cornflowerblue;
     text-align: center;
-    font-family: "Arial";
+    font-family: "Myriad Pro";
+    margin: 10px;
+    padding: 5px;
 
 }
