--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,9 @@
 body
 {
-    color: cornflowerblue;
+    color:red;
     text-align: center;
-<<<<<<< HEAD
-    font-family: "Garamond";
-=======
     font-family: "Myriad Pro";
     margin: 10px;
     padding: 5px;
->>>>>>> cabecera
 
 }
