cambios en la rama maestra

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: cornflowerblue;
+    color:chocolate;
     text-align: center;
     font-family: "Myriad Pro";
     margin: 10px;
